--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "DiseaseNetPy"
-version = "0.0.1"
+version = "0.0.2"
 authors = [
   { name="Can Hou", email="houcan@wchscu.cn" },
   { name="Haowen Liu", email="haowenliu81@gmail.com" },
@@ -30,3 +30,12 @@ license = {file="LICENSE"}
 [project.urls]
 Homepage = "https://github.com/HZcohort/DiseaseNet/tree/package"
 Issues = "https://github.com/HZcohort/DiseaseNet/issues"
+
+[tool.setuptools]
+include-package-data =true
+
+[tool.setuptools.package-data]
+"DiseaseNetPy" = [
+    "data/phecode_1.2/*.npy",
+    "data/phecode_1.2/*.csv"
+]
