package  *.csv files and *.npy files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,10 @@
+[build-system]
+requires = ["setuptools>=42", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "DiseaseNetPy"
-version = "0.0.4"
+version = "0.0.1"
 authors = [
   { name="Can Hou", email="houcan@wchscu.cn" },
   { name="Haowen Liu", email="haowenliu81@gmail.com" },
@@ -32,10 +36,21 @@ Homepage = "https://github.com/HZcohort/DiseaseNet/tree/package"
 Issues = "https://github.com/HZcohort/DiseaseNet/issues"
 
 [tool.setuptools]
-include-package-data =true
+include-package-data = true
 
 [tool.setuptools.package-data]
-"DiseaseNetPy" = [
-    "data/phecode_1.2/*.npy",
-    "data/phecode_1.2/*.csv"
+DiseaseNetPy = [
+    "data/phecode_1.2/ICD-9-WHO.npy",
+    "data/phecode_1.2/ICD-10-CM.npy",
+    "data/phecode_1.2/ICD-10-WHO.npy",
+    "data/phecode_1.2/level1_info.npy",
+    "data/phecode_1.2/level2_info.npy",
+    "data/phecode_1.2/phecode_info.csv",
+    "data/phecode_1.2/phecode_map_cm.csv",
+    "data/phecode_1.2/phecode_map_v1_2_icd10_beta.csv",
+    "data/phecode_1.2/phecode_map_who_icd9.csv",
+    "data/phecode_1.2/phecode_map_who_icd10.csv"
 ]
+
+[tool.setuptools.packages.find]
+where = ["src"]
