--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 ]
 description = "DiNetxify"
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.10"
 dependencies = [
     "python-louvain",
     "lifelines==0.30.0",
@@ -23,7 +23,7 @@ dependencies = [
     "python_louvain==0.16",
     "scikit_learn==1.6.1",
     "scipy==1.15.1",
-    "statsmodels==0.14.5"
+    "statsmodels>=0.14.4"
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
