--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "DiNetxify"
-version = "0.0.11"
+version = "0.1.0"
 authors = [
   { name="Can Hou", email="houcan@wchscu.cn" },
   { name="Haowen Liu", email="haowenliu81@gmail.com" },
@@ -13,17 +13,17 @@ description = "DiNetxify"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "python-louvain",
-    "lifelines==0.30.0",
-    "matplotlib==3.10.0",
-    "networkx==3.4.2",
-    "numpy==2.2.2",
-    "pandas==2.2.3",
-    "plotly==5.24.1",
-    "python_louvain==0.16",
-    "scikit_learn==1.6.1",
-    "scipy==1.15.1",
-    "statsmodels>=0.14.4"
+    "python_louvain>=0.15",
+    "matplotlib>=3.5.0",
+    "lifelines>=0.27.0",
+    "statsmodels>=0.14.4",
+    "networkx>=3.4.2",
+    "numpy>=1.21.5",
+    "pandas>=1.3.5",
+    "plotly>=5.4.0",
+    "scikit_learn>=1.0.2",
+    "scipy>=1.7.2",
+    "tqdm>=4.62.3"
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
