--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -18,10 +18,10 @@ jobs:
         with:
           fetch-depth: 0
  
-      - name: Set up Python 3.10.0
+      - name: Set up Python >= 3.10.0
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10.0'
+          python-version: '>=3.10.0'
  
       - name: Install dependencies
         run: |
