--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -24,12 +24,12 @@ jobs:
           python-version: '3.10'
  
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install setuptools wheel twine
- 
+        run: python -m pip install --upgrade pip
+      
       - name: Build package
-        run: python setup.py sdist bdist_wheel
+        run: |
+          python -m pip install build
+          python -m build
  
       - name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
